--- a/style.css
+++ b/style.css
@@ -50,59 +50,48 @@ main {
     display:          flex;
     justify-content:  center;
     align-items:      center;
-    /* padding:          0 15px; */
-}
-
-section {
-    width:            100%;
-    /* max-width:        1200px; */
-    height:           auto;
-    min-height:       100%;
-    display:          flex;
-    justify-content:  space-evenly;
-    /* align-items:      center; */
     gap:              20px;
+    flex-wrap:        wrap;
 }
 
-article {
+.item {
     text-align:       center;
     width:            auto;
     height:           auto;
-    display:          flex;
-    flex-direction:   column;
-    align-items:      center;
-    gap:              30px;
+    padding:          20px;
+    gap:              20px;
+    font-size:        21px;
+}
+
+.item h2 {
+    font-size: 45px;
+    text-align:       center;
+    margin:           10px 0;
 }
 
 .p {
-    width:           100%;
-    height:          auto;
-    border:          2px solid red;
-    padding:         10px;
+    padding:          12px;
+    border:           2px solid red;
 }
-
-p {
-    font-size: 20px;
-}
-
 
 footer {
-    width: 100%;
-    height: 100px;
+    width:            100%;
+    height:           80px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    display:          flex;
+    justify-content:  center;
+    align-items:      center;
+    text-align:       center;
     background-color: #1b1be4;
 }
+
+footer p { color: white; }
 
 /* Media Queries */
 
 @media screen and (max-width: 1000px) {
-    section {
-        width: auto;
-        flex-direction: column;
-        text-align: center;
+    .item {
+        width:           100%;
+        font-size:       32px;
     }
 }
