--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 
 
 html, body {
-    width:  100%;
-    height: 100%;
+    width:       100%;
+    height:      calc(100vh - 130px);
     font-family: 'Roboto', sans-serif;
 }
 
